crates/strider-analyze/tests/snapshots/v2__arm_thumb__builtins__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x55c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x564:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x56c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v21" [color="#888888", style=dashed];
  "v21" -> "16" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "23" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "16" -> "23" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x578:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "23" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xcafebabe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "23" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v28" [color="#888888", style=dashed];
  "v28" -> "23" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "30" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "23" -> "30" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x580:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "30" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "30" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v35" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "23" -> "v35" [color="#888888", style=dashed];
  "v35" -> "30" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "37" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "30" -> "37" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x590:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "37" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x32:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v41" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "30" -> "v41" [color="#888888", style=dashed];
  "v41" -> "37" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "30" -> "v42" [color="#888888", style=dashed];
  "v42" -> "37" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "44" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "37" -> "44" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v47" [color="#888888", style=dashed];
  "v47" -> "44" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v48" [color="#888888", style=dashed];
  "v48" -> "44" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v49" [color="#888888", style=dashed];
  "v49" -> "44" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "46" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v50" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v50" [color="#888888", style=dashed];
  "v50" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "37" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x1fffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "37" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v42" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "30" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "30" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v35" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "23" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "23" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v28" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "16" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v21" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "9" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v14" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "66" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "69" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "69" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
